--- a/css/style.css
+++ b/css/style.css
@@ -317,7 +317,7 @@ a img{
     color: #0a8ca3;
     font-weight: normal;
     font-size: 24px;
-    font-family: Myriad Pro;
+    font-family: "Myriad Pro";
 }
 .wrap_post .post_meta .meta_comments h3{
     color: black;
